requirements.txt
 File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\shortcuts.py", line 24, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\backends\django.py", line 33, in get_template        
    return Template(self.engine.get_template(template_name), self)    
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\loader_tags.py", line 232, in do_block
    nodelist = parser.parse(("endblock",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 518, in parse
    self.unclosed_block_tag(parse_until)
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\template\base.py", line 581, in unclosed_block_tag
    raise self.error(token, msg)
django.template.exceptions.TemplateSyntaxError: Unclosed tag on line 4: 'block'. Looking for one of: endblock.
[11/Sep/2025 08:53:17] "GET / HTTP/1.1" 500 169811
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\AppData\Roaming\Python\Python312\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Laptop\OneDrive\Desktop\prj\Credit-card\Backend\predictor\views.py", line 118, in home_viewnumpy
pandas
setuptools
google-cloud-storage
scikit-learn
pyyaml
joblib
django>=4.2,<5
mlflow

